@@ -1,57 +1,52 @@
-import javax.swing.*;
-import java.awt.*;
-import java.net.*;
+import java.io.*;
 import java.nio.file.*;
-import com.sun.java.swing.plaf.windows.WindowsLookAndFeel;
 
-// requires the native-image flag --add-exports java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED
+// UIs just won't work on native-image unless I do PGO
+// which results in a huge binary with a ton of DLL's
+// so unfortunately if the launch fails the user won't
+// have any idea it just fails :(
 public class Launcher {
 
-	static String[] options = {"Cancel", "Create issue"};
-	static String   url = "https://github.com/willuhd/PowerGadget/issues/new",
-					jarName = "pg.jar",
-					javaw = "runtime/bin/javaw.exe",
-					vmOptions = "service/vmoptions.txt";
+	static String defaultJar = "pg.jar",
+			defaultJavaw = "runtime/bin/javaw.exe",
+			vmOptions = "service/powergadget.vmoptions";
 
 	void main() {
 		try {
 			var baseDir = Path.of(Launcher.class.getProtectionDomain().getCodeSource().getLocation().toURI()).getParent();
-			Path optionsPath = baseDir.resolve(vmOptions);
-			String[] vmArgs = null;
+			var optionsPath = baseDir.resolve(vmOptions);
+			String readJar = null, readJavaw = null;
+			var lines = new String[0];
+			var vmArgsCount = 0;
 			if (Files.exists(optionsPath)) {
-				String content = Files.readString(optionsPath).trim();
-				if (!content.isEmpty()) vmArgs = content.split("\\s+");
+				lines = Files.readString(optionsPath).lines()
+						.map(String::trim)
+						.filter(line -> !line.isEmpty() && !line.startsWith("#"))
+						.toArray(String[]::new);
+
+				for (var line : lines) {
+					var lower = line.toLowerCase();
+					var isJar = lower.endsWith(".jar");
+					var isJava = lower.endsWith(".exe") || lower.contains("javaw");
+					if (readJar == null && isJar && Files.isRegularFile(baseDir.resolve(line))) readJar = line;
+					else if (readJavaw == null && isJava && Files.isRegularFile(baseDir.resolve(line))) readJavaw = line;
+					else vmArgsCount++;
+				}
 			}
-			var vmArgsLen = (vmArgs != null) ? vmArgs.length : 0;
-			var cmd = new String[vmArgsLen + 3];
-			cmd[0] = baseDir.resolve(javaw).toString();
-			if (vmArgsLen > 0) System.arraycopy(vmArgs, 0, cmd, 1, vmArgsLen);
+
+			var jarPath = baseDir.resolve(readJar != null ? readJar : defaultJar);
+			var javawPath = baseDir.resolve(readJavaw != null ? readJavaw : defaultJavaw);
+			if (!Files.isRegularFile(jarPath)) throw new FileNotFoundException("Missing JAR: " + jarPath);
+			if (!Files.isRegularFile(javawPath)) throw new FileNotFoundException("Missing Runtime: " + javawPath);
+			var cmd = new String[vmArgsCount + 3];
+			cmd[0] = javawPath.toString();
+			var currentIdx = 1;
+			for (var line : lines) if (!line.equals(readJar) && !line.equals(readJavaw)) cmd[currentIdx++] = line;
 			cmd[cmd.length - 2] = "-jar";
-			cmd[cmd.length - 1] = baseDir.resolve(jarName).toString();
+			cmd[cmd.length - 1] = jarPath.toString();
 			new ProcessBuilder(cmd).directory(baseDir.toFile()).start();
 		} catch (Exception e) {
-			try {UIManager.setLookAndFeel(new WindowsLookAndFeel());}
-			catch (Exception f) {makeErr("Can't get current folder to launch PowerGadget, because " + e.getMessage() +
-					"\nwhich is caused by " + e.getCause() + ".\n\nAdditionally, failed to get the LaF: " + f.getMessage());}
-			makeErr("Can't get current folder to launch PowerGadget, because " + e.getMessage() +
-					"\nwhich is caused by " + e.getCause());
+			System.err.println("Can't launch PowerGadget, because " + e.getMessage() + "\nwhich is caused by " + e.getCause());
 		}
-	}
-
-	void makeErr(String msg){
-		var v = JOptionPane.showOptionDialog(
-				null, msg, "Error",
-				JOptionPane.DEFAULT_OPTION, JOptionPane.ERROR_MESSAGE,
-				null, options, options[0]
-		);
-
-		if(v == 1)
-			try {Desktop.getDesktop().browse(new URI(url));}
-			catch(Exception e) {JOptionPane.showMessageDialog(null,
-					"Can't get the browser to open the issue creation link" + url + ",\ndue to " +
-							e.getMessage() + "\nwhich is caused by " + e.getCause() +
-							".\nIf you still want to create the issue (appreciated!), here's the message:\n\n"
-							+ msg, "Error", JOptionPane.ERROR_MESSAGE);}
-		System.exit(0); // don't need anymore
 	}
 }
